--- a/client/templates/navigation/navigation.html
+++ b/client/templates/navigation/navigation.html
@@ -1,11 +1,10 @@
 <template name="navigation">
-<nav class="indigo darken-3">
+<nav>
   <div class="nav-wrapper">
   <div class="container">
   <a href="#" class="brand-logo">Power Overwhelming</a>
   <ul id="nav-mobile" class="right hide-on-med-and-down">
-    <li><a href="{{pathFor route='home'}}">Home</a></li>
-    <li><a href="{{pathFor route='register'}}">Register</a></li>
+    <li><a href="{{pathFor route='playerlist'}}">Home</a></li>
   </ul>
   </div>
   </div>
