--- a/client/templates/footer/footer.html
+++ b/client/templates/footer/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-    <footer class="page-footer indigo darken-3">
+    <footer class="page-footer">
        <div class="container">
           <div class="row">
             <div class="col l5 s12">
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright indigo darken-4">
+    <div class="footer-copyright">
       <div class="container">
         <span class="white-text">&copy; 2015 Power Overwhelming</span>
     </div>
