--- a/client/templates/playerlist/playerlist.scss
+++ b/client/templates/playerlist/playerlist.scss
@@ -1,12 +1,24 @@
-.tabs {
-
-}
-
-playerlist .flex {
+.player-list .flex {
   justify-content: space-between;
   align-items: flex-start;
   align-content: flex-start;
 }
 
+// Shorten the race names in tab on small screens
+.player-list .race-name-small{
+  display: block;
+}
+.player-list .race-name{
+  display: none;
+}
+
+@media (min-width:500px){
+  .player-list .race-name-small{
+    display: none;
+  }
+  .player-list .race-name{
+    display: block;
+  }
+}
 
 
