--- a/client/templates/profilecard/profilecard.html
+++ b/client/templates/profilecard/profilecard.html
@@ -1,5 +1,5 @@
-<template name="playercard">
-    {{#each findCard}}
+<template name="profilecard">
+  {{#with findOneCard}}
       <div class="card player-card {{race}}">
         <div class="card-content">
           <!-- <span class="card-title" ng-if="ctrl.self === 'true'">You Are Logged In As</span> -->
@@ -11,7 +11,7 @@
                 <span>{{bnetid}}</span>
               </a>
             </span>
-              <span class="online" title="This player is online"><i class="material-icons">power_settings_new</i></span>
+            <span class="online" title="This player is online"><i class="material-icons">power_settings_new</i></span>
           </div>
           <span class="player-badges">
             <span class="race">{{race}}</span> - 
@@ -20,10 +20,8 @@
           <p class="text">{{description}}</p>
         </div>
       </div>
-    {{/each}}
+  {{/with}}
+    <a class="btn edit">Edit Info</a>
+    <a class="btn logout">Logout</a>
 </template>
-
-
-
-
 
