--- a/client/templates/playerform/playerform.html
+++ b/client/templates/playerform/playerform.html
@@ -1,9 +1,11 @@
 <template name="playerform">
 
   {{#if player}}
-
-      {{>profilecard}}
-          
+    {{#with player}}
+      {{>playercard}}
+    {{/with}}
+      <a class="btn edit">Edit Info</a>
+      <a class="btn logout">Logout</a>
   {{else}}
     <div class="card grey lighten-3">
       <div class="card-content black-text">
