--- a/client/templates/playerlist/playerlist.html
+++ b/client/templates/playerlist/playerlist.html
@@ -7,19 +7,33 @@
       <div class="col s12">
         <h5>Online Now:</h5>
 
-        <ul class="tabs z-depth-1">
-           <li class="tab col s3" value="All"><a class="active" href="#" id="filter">All</a></li>
-           <li class="tab col s3"><a href="#" id="filter">
-             <span class="race-name">Protoss</span><span class="race-name-small">Toss</span></a>
+        <ul class="tabs z-depth-1" id="race-selector">
+           <li class="tab col s3">
+              <a class="active" href="#" id="All">All</a>
            </li>
-           <li class="tab col s3"><a href="#">
-             <span class="race-name">Terran</span><span class="race-name-small">Ter</span></a>
+           <li class="tab col s3">
+             <a href="#" id="protoss">
+              <span class="race-name race-selector">Protoss</span>
+              <span class="race-name-small race-selector">Toss</span>
+             </a>
            </li>
-           <li class="tab col s3"><a href="#">
-             <span class="race-name">Zerg</span><span class="race-name-small">Zer</span></a>
+           <li class="tab col s3">
+             <a href="#" id="terran">
+              <span class="race-name race-selector">Terran</span>
+              <span class="race-name-small race-selector">Ter</span>
+             </a>
            </li>
-           <li class="tab col s3"><a href="#R">
-             <span class="race-name">Random</span><span class="race-name-small">Rand</span></a>
+           <li class="tab col s3">
+             <a href="#" id="zerg">
+              <span class="race-name race-selector">Zerg</span>
+              <span class="race-name-small race-selector">Zer</span>
+             </a>
+           </li>
+           <li class="tab col s3">
+             <a href="#" id="random">
+              <span class="race-name race-selector">Random</span>
+              <span class="race-name-small race-selector">Rand</span>
+             </a>
            </li>
         </ul>
       </div>
