last login date added

--- a/client/templates/playercard/playercard.html
+++ b/client/templates/playercard/playercard.html
@@ -18,6 +18,7 @@
             <span class="league">{{rank}}</span>
           </span>
           <p class="text">{{description}}</p>
+          <p class="last-login text">last active: {{formatTime loginDate}}</p>
         </div>
       </div>
     
