--- a/client/templates/playerlist/playerlist.html
+++ b/client/templates/playerlist/playerlist.html
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="col s12">
         <div class="flex">
-          {{#each findCard}}
+          {{#each filterCards}}
           	{{> playercard}}
           {{/each}}
         </div>
