--- a/client/templates/playerform/playerform.html
+++ b/client/templates/playerform/playerform.html
@@ -51,9 +51,9 @@
   <!-- Modal Structure -->
   <div id="modalEdit" class="modal bottom-sheet">
     <div class="modal-content">
-    
+    {{#if player}}
       {{>modalform}}
-    
+    {{/if}}
     </div>
   </div>
 </template>
