--- a/lib/stylesheets/main.scss
+++ b/lib/stylesheets/main.scss
@@ -1,11 +1,11 @@
 @import "_colors.scss";
 
 // If you want to override materialize sass variables you can uncomment the following:
-@import "{poetic:materialize-scss}/bower_components/materialize/sass/components/_color.scss";
-//$primary-color: color("blue", "lighten-2");
+@import "{poetic:materialize-scss}/sass/components/_color.scss";
+// $primary-color: color("blue", "lighten-2");
 
 // import main scss file
-@import "{poetic:materialize-scss}/bower_components/materialize/sass/materialize.scss";
+@import "{poetic:materialize-scss}/sass/materialize.scss";
 
 @import "../../client/templates/footer/footer.scss";
 @import "../../client/templates/header/header.scss";
