--- a/client/templates/header/header.scss
+++ b/client/templates/header/header.scss
@@ -3,7 +3,7 @@
 header {
   width: 100%;
   background-image: url('images/cover.png');
-  background-position: center;
+  background-position: top;
   background-size: cover;
 }
 
