--- a/client/templates/playerform/modalform.html
+++ b/client/templates/playerform/modalform.html
@@ -3,11 +3,11 @@
 <form>
   <div class="row">
     <div class="input-field col s6">
-      <input id="name" name="name" type="text" value="{{player.name}}" required maxlength="12" minlength="3">
+      <input id="name" name="name" type="text" value="{{name}}" required maxlength="12" minlength="3">
       <label class="active" for="name">BNet Username</label>
     </div>
     <div class="input-field col s6">
-      <input id="bnetid" name="bnetid" type="number" value="{{player.bnetid}}"  max="10000" required>
+      <input id="bnetid" name="bnetid" type="number" value="{{bnetid}}"  max="10000" required>
       <label class="active" for="bnetid">BNet ID #</label>
     </div>
   </div>
@@ -40,7 +40,7 @@
   </div>
   <div class="row">
     <div class="input-field col s12">
-      <textarea id="text" value="{{player.description}}" class="materialize-textarea" length="120" maxlength="120" name="description"></textarea>
+      <textarea id="text" value="{{description}}" class="materialize-textarea" length="120" maxlength="120" name="description"></textarea>
       <label class="active" for="text">Tell us something about yourself</label>
     </div>
   </div>
