--- a/client/templates/playercard/playercard.html
+++ b/client/templates/playercard/playercard.html
@@ -16,7 +16,8 @@
           </div>
           <span class="player-badges">
             <span class="race">{{race}}</span> -
-            <span class="league">{{rank}}</span>
+            <span class="league">{{rank}}</span> -
+            <span class="server">{{server}}</span>
           </span>
           <p class="text">{{description}}</p>
           <p class="last-login text">last active: {{formatTime loginDate}}</p>
